--- a/_config.yml
+++ b/_config.yml
@@ -154,7 +154,7 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 
 # Conversion
-markdown: CommonMark
+markdown: kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
