--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=G4X-o9gAAAAJ&view_op=list_works&gmla=AJsN-F7aR36jRhTcMRflBFewkrKzWcVp0QoBfEl88tBU5ehueFOLak-c7bqETyVTYNhUjPk5QkbPxmJXGR64Nb_YH4GEuwm2ZQO917Nw9IwDtBc0WqlbL0BXuXCvdlqpKW-u7Z4ddtDo"
-  email            : "s1dai@ucsd.eng.edu"
+  email            : "s1dai@eng.ucsd.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
